# ChangeVoice

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/androiddemoax/bianshengboygirl/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  changeVoice.cpp  com_androiddemoax_bianshengboygirl_Changevoices.h
app/src/main/java/com/androiddemoax/bianshengboygirl/: Changevoices.java  FloatsideSing.java  MainActivity.java
app/src/main/res/drawable/: shape.xml
app/src/main/res/layout/: activity_main.xml  change_layout.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/androiddemoax/bianshengboygirl/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
